--- a/PlanetWallet/Views/6_Transfer/Popups/AdvancedGasView.xib
+++ b/PlanetWallet/Views/6_Transfer/Popups/AdvancedGasView.xib
@@ -43,13 +43,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWp-gu-y47" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="122" width="375" height="287"/>
+                    <rect key="frame" x="0.0" y="98" width="375" height="311"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cDp-Xe-tbb">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Advanced Option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jGV-HO-2tr" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                    <rect key="frame" x="112" y="36.5" width="151" height="26.5"/>
+                                    <rect key="frame" x="112" y="37" width="151" height="26.5"/>
                                     <fontDescription key="fontDescription" name="WorkSans-SemiBold" family="Work Sans" pointSize="18"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -58,7 +58,7 @@
                                     </userDefinedRuntimeAttributes>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EM2-42-mZ7">
-                                    <rect key="frame" x="0.0" y="76.5" width="375" height="1"/>
+                                    <rect key="frame" x="0.0" y="77" width="375" height="1"/>
                                     <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="ZLz-9s-fg2"/>
@@ -87,16 +87,17 @@
                                 <constraint firstItem="jGV-HO-2tr" firstAttribute="top" secondItem="cDp-Xe-tbb" secondAttribute="centerY" constant="-2" id="cuV-vP-bPN"/>
                                 <constraint firstItem="EM2-42-mZ7" firstAttribute="leading" secondItem="cDp-Xe-tbb" secondAttribute="leading" id="fUN-so-voJ"/>
                                 <constraint firstAttribute="trailing" secondItem="EM2-42-mZ7" secondAttribute="trailing" id="igj-wq-yRM"/>
+                                <constraint firstAttribute="height" constant="78" id="m3C-9K-n7z"/>
                             </constraints>
                         </view>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="b5d-g8-qKK">
-                            <rect key="frame" x="20" y="97.5" width="335" height="80"/>
+                            <rect key="frame" x="20" y="98" width="335" height="81"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lf2-Oh-Em7">
-                                    <rect key="frame" x="0.0" y="0.0" width="162.5" height="80"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="162.5" height="81"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gas Price (Gwei)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yC2-7P-chh" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="112" height="15"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="112" height="16"/>
                                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                             <color key="textColor" name="detailTextLight"/>
                                             <nil key="highlightedColor"/>
@@ -105,7 +106,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gy0-ms-tBm">
-                                            <rect key="frame" x="0.0" y="25" width="162.5" height="55"/>
+                                            <rect key="frame" x="0.0" y="26" width="162.5" height="55"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yxg-kj-YqP">
                                                     <rect key="frame" x="15" y="0.0" width="132.5" height="55"/>
@@ -150,10 +151,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vmQ-HA-kQl">
-                                    <rect key="frame" x="172.5" y="0.0" width="162.5" height="80"/>
+                                    <rect key="frame" x="172.5" y="0.0" width="162.5" height="81"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gas Limit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTJ-VR-QEV" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="65.5" height="15"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="65.5" height="16"/>
                                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                                             <color key="textColor" name="detailTextLight"/>
                                             <nil key="highlightedColor"/>
@@ -162,7 +163,7 @@
                                             </userDefinedRuntimeAttributes>
                                         </label>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cf9-f5-87J">
-                                            <rect key="frame" x="0.0" y="25" width="162.5" height="55"/>
+                                            <rect key="frame" x="0.0" y="26" width="162.5" height="55"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bjl-Xs-8qx">
                                                     <rect key="frame" x="15" y="0.0" width="132.5" height="55"/>
@@ -207,15 +208,18 @@
                                     </constraints>
                                 </view>
                             </subviews>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="81" id="EuB-Hx-6B4"/>
+                            </constraints>
                         </stackView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fees: 0.003 ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NIW-WL-3RC" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                            <rect key="frame" x="20" y="187.5" width="110" height="20.5"/>
+                            <rect key="frame" x="20" y="189" width="110" height="20.5"/>
                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                             <color key="textColor" name="detailTextLight"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="9pQ-Hi-l6t">
-                            <rect key="frame" x="20" y="227" width="335" height="55"/>
+                            <rect key="frame" x="20" y="229.5" width="335" height="55"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LoB-KP-n2J" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
                                     <rect key="frame" x="0.0" y="0.0" width="163" height="55"/>
@@ -281,20 +285,21 @@
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="b5d-g8-qKK" secondAttribute="trailing" constant="20" id="9oa-jR-h5X"/>
+                        <constraint firstItem="9pQ-Hi-l6t" firstAttribute="top" secondItem="NIW-WL-3RC" secondAttribute="bottom" constant="20" id="NR7-ix-Mvy"/>
                         <constraint firstAttribute="trailing" secondItem="9pQ-Hi-l6t" secondAttribute="trailing" constant="20" id="OPR-K8-Bo1"/>
                         <constraint firstItem="cDp-Xe-tbb" firstAttribute="leading" secondItem="QWp-gu-y47" secondAttribute="leading" id="Piz-0M-3g7"/>
                         <constraint firstItem="NIW-WL-3RC" firstAttribute="top" secondItem="b5d-g8-qKK" secondAttribute="bottom" constant="10" id="Ugu-wW-TeZ"/>
                         <constraint firstItem="b5d-g8-qKK" firstAttribute="leading" secondItem="QWp-gu-y47" secondAttribute="leading" constant="20" id="Ugv-EI-yhG"/>
-                        <constraint firstAttribute="bottom" secondItem="9pQ-Hi-l6t" secondAttribute="bottom" constant="5" id="bFs-n6-qCY"/>
                         <constraint firstAttribute="trailing" secondItem="cDp-Xe-tbb" secondAttribute="trailing" id="e4H-Yx-yAl"/>
                         <constraint firstItem="cDp-Xe-tbb" firstAttribute="top" secondItem="QWp-gu-y47" secondAttribute="top" id="e5c-HL-cvd"/>
                         <constraint firstItem="b5d-g8-qKK" firstAttribute="top" secondItem="cDp-Xe-tbb" secondAttribute="bottom" constant="20" id="fhG-1L-XxV"/>
                         <constraint firstItem="9pQ-Hi-l6t" firstAttribute="leading" secondItem="QWp-gu-y47" secondAttribute="leading" constant="20" id="km8-av-uWa"/>
+                        <constraint firstAttribute="height" constant="311" id="nJM-0y-UpM"/>
                         <constraint firstItem="NIW-WL-3RC" firstAttribute="leading" secondItem="QWp-gu-y47" secondAttribute="leading" constant="20" id="u3h-kL-s9e"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1v8-YE-CPz" userLabel="Background View">
-                    <rect key="frame" x="0.0" y="20" width="375" height="102"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="78"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="teD-AP-N08" userLabel="Key Pad Container">
@@ -581,18 +586,14 @@
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="QWp-gu-y47" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.43" id="6OL-A8-diG"/>
                 <constraint firstAttribute="bottom" secondItem="teD-AP-N08" secondAttribute="bottom" id="6k6-Iq-K9F"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="QWp-gu-y47" secondAttribute="trailing" id="7C5-Ww-eHW"/>
                 <constraint firstItem="teD-AP-N08" firstAttribute="top" secondItem="QWp-gu-y47" secondAttribute="bottom" id="EOU-Sb-Y4Y"/>
                 <constraint firstItem="1v8-YE-CPz" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="PVm-kC-A4N"/>
-                <constraint firstItem="teD-AP-N08" firstAttribute="height" secondItem="QWp-gu-y47" secondAttribute="height" multiplier="0.9" id="SGA-Ny-BHG"/>
                 <constraint firstItem="teD-AP-N08" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="aDI-Ch-IPx"/>
-                <constraint firstItem="cDp-Xe-tbb" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.116" id="rpV-I8-K4T"/>
                 <constraint firstItem="QWp-gu-y47" firstAttribute="top" secondItem="1v8-YE-CPz" secondAttribute="bottom" id="uKh-mJ-kQy"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="teD-AP-N08" secondAttribute="trailing" id="v2A-CR-qRf"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="1v8-YE-CPz" secondAttribute="trailing" id="vQi-I7-Uj7"/>
-                <constraint firstItem="b5d-g8-qKK" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.12" id="vmb-yC-Lbg"/>
                 <constraint firstItem="QWp-gu-y47" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="wB1-Vn-7bU"/>
                 <constraint firstItem="1v8-YE-CPz" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="xBG-c5-ke6"/>
             </constraints>
