--- a/PlanetWallet/Resources/5_Token.storyboard
+++ b/PlanetWallet/Resources/5_Token.storyboard
@@ -62,7 +62,7 @@
                                     <userDefinedRuntimeAttribute type="string" keyPath="xibLocKey" value="token_add_toolbar_title"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YXf-V3-UG8" userLabel="MenuBar">
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YXf-V3-UG8" userLabel="MenuBar">
                                 <rect key="frame" x="0.0" y="88" width="414" height="59"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="u17-LU-Zu1">
@@ -157,7 +157,7 @@
                                 </constraints>
                             </view>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="boh-dm-M1Q">
-                                <rect key="frame" x="0.0" y="147" width="414" height="715"/>
+                                <rect key="frame" x="0.0" y="110" width="414" height="752"/>
                                 <connections>
                                     <segue destination="LwC-2B-6eK" kind="embed" identifier="containerViewSegue" id="3Bn-JX-VM0"/>
                                 </connections>
@@ -168,7 +168,7 @@
                             <constraint firstItem="YXf-V3-UG8" firstAttribute="height" secondItem="Qqx-6O-QMl" secondAttribute="height" multiplier="0.066" id="FvD-uL-Uq4"/>
                             <constraint firstItem="boh-dm-M1Q" firstAttribute="leading" secondItem="DUZ-nb-IMd" secondAttribute="leading" id="HNO-6E-QkK"/>
                             <constraint firstItem="DUZ-nb-IMd" firstAttribute="trailing" secondItem="boh-dm-M1Q" secondAttribute="trailing" id="LaY-ge-hAa"/>
-                            <constraint firstItem="boh-dm-M1Q" firstAttribute="top" secondItem="YXf-V3-UG8" secondAttribute="bottom" id="Orb-7n-xdL"/>
+                            <constraint firstItem="boh-dm-M1Q" firstAttribute="top" secondItem="DUZ-nb-IMd" secondAttribute="top" constant="66" id="Orb-7n-xdL"/>
                             <constraint firstItem="LmE-sA-7sH" firstAttribute="leading" secondItem="DUZ-nb-IMd" secondAttribute="leading" id="PZE-7U-G02"/>
                             <constraint firstItem="DUZ-nb-IMd" firstAttribute="trailing" secondItem="LmE-sA-7sH" secondAttribute="trailing" id="aLl-U9-lhz"/>
                             <constraint firstItem="YXf-V3-UG8" firstAttribute="leading" secondItem="DUZ-nb-IMd" secondAttribute="leading" id="cBR-oF-5Gy"/>
