--- a/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
+++ b/PlanetWallet/Views/4_Main/Cells/ETHCoinCell.xib
@@ -42,7 +42,7 @@
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ETH" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEW-xQ-oEs" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                     <rect key="frame" x="50" y="23.5" width="32" height="23.5"/>
-                    <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
+                    <fontDescription key="fontDescription" name="WorkSans-Medium" family="Work Sans" pointSize="16"/>
                     <color key="textColor" name="textColorDark"/>
                     <nil key="highlightedColor"/>
                     <userDefinedRuntimeAttributes>
