--- a/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
+++ b/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
@@ -29,7 +29,7 @@
             <rect key="frame" x="0.0" y="0.0" width="461" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tokenIconETH" translatesAutoresizingMaskIntoConstraints="NO" id="owr-nd-dg6">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="owr-nd-dg6">
                     <rect key="frame" x="20" y="25" width="20" height="20"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="20" id="As9-Pj-bol"/>
@@ -109,6 +109,5 @@
     </objects>
     <resources>
         <image name="imageCheckboxOn" width="39" height="39"/>
-        <image name="tokenIconETH" width="30" height="30"/>
     </resources>
 </document>
